# job-assistant-ai-platform

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/api/: dependencies.py  main.py  schemas.py
app/config/: intents.yaml
app/contracts/: base_response.py  job_response.py  knowledge_response.py  resume_response.py
app/core/: bm25_index.py  calibration.py  errors.py  hybrid_router.py  intent_registry.py  job_models.py  llm_intent_fallback.py  local_arbitrator.py  logging.py  state.py  telemetry.py
app/graph/: builder.py
app/graph/nodes/: arbitration.py  execution_node.py  guardrail_node.py  intent.py  job_agent.py  rag_agent.py  resume_agent.py
app/policy/: policy_engine.py
app/services/: job_search_service.py  knowledge_service.py  resume_service.py
docs/: architecture.mmd  sequence_diagram.mmd  state_diagram.mmd
logs/: routing_logs.jsonl
scripts/: run_calibration.py
tests/unit/: test_api_contract.py  test_state_machine.py
